--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@headlessui/react": "^2.1.9",
     "@heroicons/react": "^2.1.5",
+    "@paypal/react-paypal-js": "^8.7.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "flowbite": "^2.5.1",
     "flowbite-react": "^0.10.1",
     "heroicons": "^2.1.5",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-reduce": "^0.2.0",
     "react-redux": "^9.1.2",
