--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.5",
     "@paypal/react-paypal-js": "^8.7.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "axios": "^1.7.7",
     "flowbite": "^2.5.1",
     "flowbite-react": "^0.10.1",
